# compile-time-hashes

./: .gitignore  CMakeLists.txt  README.md  bench_result_hash.txt  bench_results_fast_hash_gen.txt  bench_results_hash_gen.txt
benchmark/: bench_compressed_hash.cpp  bench_hashes.cpp  bench_main.cpp  bench_perfect_hash_generation.cpp  bench_sort.cpp
include/hashes/: config.hpp  fast_perfect_compressed_hash.hpp  fnv1a.hpp  hashed_string.hpp  murmur2.hpp  perfect_compressed_hash.hpp  swap.hpp
include/sort/: insertion_sort.hpp  radix_sort.hpp
include/utility/: find_modulo.hpp  is_unique.hpp  log2.hpp  smallest_difference.hpp
tests/: test_compressed_hash.cpp  test_fast_compressed_hash.cpp  test_fnv1a.cpp  test_hashed_strings.cpp  test_main.cpp  test_murmur2.cpp  test_sort.cpp
